<resources>
    <string name="app_name">智能交通</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="creative">创意设计</string>
    <string name="query_etc">ETC查询</string>
    <string name="car_zhi">小车充值</string>
    <string name="sense">环境曲线图</string>
    <string name="my_car">我的座驾</string>
    <string name="sense_title">标题</string>
    <string name="zhuanghu_yue">账户余额：100元</string>
    <string name="number_car">车号：</string>
    <string name="chongzhi_money">充值金额：</string>
    <string name="car_query">查询</string>
    <string name="car_money">充值</string>
    <string name="query_road">路况查询</string>
    <string name="etc_quert">账单记录</string>
    <string name="query">查询</string>
    <string name="tv_number">序号</string>
    <string name="tv_time">充值时间</string>
    <string name="tv_user">操作人</string>
    <string name="pay_money">充值金额（元）</string>
    <string name="tv_car">车号</string>
    <string name="tv_default">暂时还没有充值记录</string>
    <string name="traffic_light">红绿灯管理</string>
    <string name="sort">排序：</string>
    <string name="road_number">路口</string>
    <string name="red_time">红灯时长（S）</string>
    <string name="yellow_time">黄灯时长（S）</string>
    <string name="green_time">绿灯时长（S）</string>
    <string name="loading">加载中</string>
    <string name="jinru">立即进入</string>
    <string name="title_activity_login">用户登陆</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_email">账户格式不正确</string>
    <string name="error_invalid_password">密码太短了</string>
    <string name="error_incorrect_password">密码格式不正确</string>
    <string name="error_field_required">请输入用户名</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user">账号</string>
    <string name="action_register">注册</string>
    <string name="remember">记住密码</string>
    <string name="auto">自动登陆</string>
    <string name="road_status">道路状态</string>
    <string name="put_user">请输入用户名</string>
    <string name="put_pwd">请输入密码</string>
    <string name="put_pwds">请确认密码</string>
    <string name="put_phone">请输入手机号码</string>
    <string name="cancel">取消</string>
    <string name="yes">确认</string>
    <string name="en_sense">实时环境</string>
    <string name="setting">设置</string>
    <string name="net_setting">网络设置</string>
    <string name="ip_setting">IP设置：</string>
    <string name="port_setting">端口设置：</string>
    <string name="no">取消</string>
    <string name="sense_type">传感器类型:</string>
    <string name="query_period">查询周期</string>
    <string name="sensor">传感器</string>
    <string name="data">数据</string>
    <string name="is_status">是否正常</string>
    <string name="time">时间</string>
    <string name="sense_history">环境历史数据</string>
    <string name="car_start_manage">小车开停控制</string>
    <string name="car_number">车号:</string>
    <string name="start_yop">启停:</string>
    <string name="start">启动</string>
    <string name="sop">停止</string>
    <string name="car_speed">小车速度查询</string>
    <string name="speed">速度:</string>
    <string name="car_manage">车辆管理</string>
    <string name="light_status">路灯状态：</string>
    <string name="light_number">打开</string>
    <string name="light_open">打开</string>
    <string name="light_on">关闭</string>
    <string name="light_manage">路灯管理</string>
    <string name="light_query">光强度查询</string>
    <string name="light_describe">点击按钮查询当前光强度</string>
    <string name="setting_auto_mode">设置自动手动控制模式、</string>
    <string name="auto_mode">自动</string>
    <string name="manual">手动</string>
    <string name="light_intensity_check">光照检测</string>
</resources>
