<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="120dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_query"
            android:textColor="#000"
            android:textSize="38sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_query_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:background="@drawable/btn_bg"
                android:padding="8dp"
                android:text="@string/query"
                android:textSize="38sp" />


            <TextView
                android:layout_marginLeft="28dp"
                android:id="@+id/tv_light_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_describe"
                android:textColor="#000"
                android:textSize="38sp" />
        </LinearLayout>



        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_auto_mode"
            android:textColor="#000"
            android:textSize="38sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Switch
                android:checked="true"
                android:id="@+id/sw_light"
                android:textOn="@string/manual"
                android:textOff="@string/auto_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>