<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_number"
            android:textColor="#000"
            android:gravity="center"
            android:text="@string/tv_number"
            android:background="@drawable/text_bgs"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_car"
            android:textColor="#000"
            android:gravity="center"
            android:text="@string/tv_car"
            android:background="@drawable/text_bgs"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_money"
            android:textColor="#000"
            android:gravity="center"
            android:text="@string/pay_money"
            android:background="@drawable/text_bgs"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_user"
            android:textColor="#000"
            android:gravity="center"
            android:text="@string/tv_user"
            android:background="@drawable/text_bgs"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_time"
            android:textColor="#000"
            android:gravity="center"
            android:text="@string/tv_time"
            android:background="@drawable/text_bgs"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>