<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/etc_quert"
            android:textColor="#000"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:id="@+id/sp_etc_query"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        
        <Button
            android:textSize="25sp"
            android:text="@string/query"
            android:layout_marginLeft="18dp"
            android:id="@+id/btn_query_etc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#000"
                android:gravity="center"
                android:text="@string/tv_number"
                android:background="@drawable/text_bg"
                android:textSize="25sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                android:textColor="#000"
                android:gravity="center"
                android:text="@string/tv_car"
                android:background="@drawable/text_bg"
                android:textSize="25sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                android:textColor="#000"
                android:gravity="center"
                android:text="@string/pay_money"
                android:background="@drawable/text_bg"
                android:textSize="25sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                android:textColor="#000"
                android:gravity="center"
                android:text="@string/tv_user"
                android:background="@drawable/text_bg"
                android:textSize="25sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                android:textColor="#000"
                android:gravity="center"
                android:text="@string/tv_time"
                android:background="@drawable/text_bg"
                android:textSize="25sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>


        <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_default"
                android:layout_gravity="center"
                android:textColor="#000"
                android:gravity="center"
                android:text="@string/tv_default"
                android:background="@drawable/text_bg"
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ListView
                android:id="@+id/lv_etc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>