<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/sense_type"
            android:textSize="38sp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:textAlignment="center"
            android:id="@+id/sp_sense_type"
            android:layout_width="200dp"
            android:layout_height="match_parent"/>

        <TextView
            android:text="@string/query_period"
            android:textSize="38sp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:textAlignment="center"
            android:id="@+id/sp_sense_time"
            android:layout_width="200dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_query"
            android:padding="8dp"
            android:background="@drawable/btn_bg"
            android:text="@string/query"
            android:textSize="35sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_bg"
                android:gravity="center"
                android:text="@string/sensor"
                android:textColor="#000"
                android:textSize="25sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_bg"
                android:gravity="center"
                android:text="@string/data"
                android:textColor="#000"
                android:textSize="25sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_bg"
                android:gravity="center"
                android:text="@string/is_status"
                android:textColor="#000"
                android:textSize="25sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_bg"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="#000"
                android:textSize="25sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:visibility="gone"
                android:padding="6dp"
                android:layout_gravity="center"
                android:id="@+id/tv_default"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/text_bg"
                android:text="@string/tv_default"
                android:textColor="#000"
                android:textSize="25sp" />

            <ListView
                android:id="@+id/lv_sense_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </LinearLayout>


</LinearLayout>