<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_bgs"
            android:gravity="center"
            android:text="@string/road_number"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_bgs"
            android:gravity="center"
            android:text="@string/red_time"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_bgs"
            android:gravity="center"
            android:text="@string/yellow_time"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_bgs"
            android:gravity="center"
            android:text="@string/green_time"
            android:textColor="#000"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>