<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_yue"
        android:text="@string/zhuanghu_yue"
        android:textColor="#000"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/number_car"
            android:textColor="#000"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_marginLeft="15dp"
            android:id="@+id/sp_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/chongzhi_money"
            android:textColor="#000"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:maxLength="5"
            android:textSize="30sp"
            android:singleLine="true"
            android:inputType="number"
            android:layout_marginLeft="15dp"
            android:id="@+id/et_money"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_margin="10dp"
            android:background="@drawable/btn_bg"
            android:padding="9dp"
            android:id="@+id/btn_query_car"
            android:textSize="25sp"
            android:text="@string/car_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_margin="10dp"
            android:background="@drawable/btn_bg"
            android:padding="9dp"
            android:id="@+id/btn_car_money"
            android:textSize="25sp"
            android:text="@string/car_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>